--- a/yunmeng/package.json
+++ b/yunmeng/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "dev": "vue-cli-service serve --mode dev",
-    "build:prod": "vue-cli-service build --mode prod"
+    "build:prod": "vue-cli-service build --mode prod",
+      "deploy": "gh-pages -d dist"
+
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -21,6 +23,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "gh-pages": "^5.0.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
